--- a/ScanberrySDK/Base.lproj/Main.storyboard
+++ b/ScanberrySDK/Base.lproj/Main.storyboard
@@ -1,24 +1,152 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cX0-gY-IyR">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="HPZ-Yx-Cs5">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="TiK-EU-uPZ" customClass="ViewController" customModule="ScanberrySDK" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lip-T2-Xce">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ebt-Bb-8sn">
+                                <rect key="frame" x="0.0" y="818" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="H9q-Cz-ngi"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="edit" id="qnS-Q4-iD9">
+                                        <connections>
+                                            <action selector="editTapped" destination="TiK-EU-uPZ" id="vuz-jn-UTl"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="uOm-Az-dFH"/>
+                                    <barButtonItem systemItem="organize" id="9Ok-5i-K5I">
+                                        <connections>
+                                            <action selector="galleryTapped" destination="TiK-EU-uPZ" id="Nvf-qS-7BW"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem width="15" style="plain" systemItem="fixedSpace" id="bQK-4Q-qnN"/>
+                                    <barButtonItem systemItem="camera" id="Nwy-e9-WXX">
+                                        <connections>
+                                            <action selector="startCamera" destination="TiK-EU-uPZ" id="SQp-r2-QUh"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="zcm-Up-v0b"/>
+                                    <barButtonItem title="OCR" id="bFc-UH-wwn">
+                                        <connections>
+                                            <action selector="ocrTapped" destination="TiK-EU-uPZ" id="yRw-q5-cVx"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i2G-SP-YB9">
+                                <rect key="frame" x="0.0" y="88" width="414" height="700"/>
+                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="ulR-ik-Csc">
+                                <rect key="frame" x="197" y="438" width="20" height="20"/>
+                                <color key="color" red="0.0" green="0.59999999999999998" blue="0.074509803920000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ydf-Yu-tKC">
+                                <rect key="frame" x="40" y="438" width="334" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ebt-Bb-8sn" firstAttribute="trailing" secondItem="pgf-sb-qrV" secondAttribute="trailing" id="2zX-Pv-AiY"/>
+                            <constraint firstItem="ulR-ik-Csc" firstAttribute="centerX" secondItem="lip-T2-Xce" secondAttribute="centerX" id="AjS-yD-G91"/>
+                            <constraint firstItem="pgf-sb-qrV" firstAttribute="trailing" secondItem="Ydf-Yu-tKC" secondAttribute="trailing" constant="40" id="JKB-nK-2XB"/>
+                            <constraint firstItem="ulR-ik-Csc" firstAttribute="centerY" secondItem="lip-T2-Xce" secondAttribute="centerY" id="Qic-ph-l9d"/>
+                            <constraint firstItem="Ydf-Yu-tKC" firstAttribute="centerX" secondItem="lip-T2-Xce" secondAttribute="centerX" id="RBP-1T-vEr"/>
+                            <constraint firstItem="ebt-Bb-8sn" firstAttribute="leading" secondItem="pgf-sb-qrV" secondAttribute="leading" id="SZg-rp-sT4"/>
+                            <constraint firstItem="i2G-SP-YB9" firstAttribute="leading" secondItem="pgf-sb-qrV" secondAttribute="leading" id="TCZ-rh-T5T"/>
+                            <constraint firstItem="i2G-SP-YB9" firstAttribute="trailing" secondItem="pgf-sb-qrV" secondAttribute="trailing" id="TfX-1s-Xky"/>
+                            <constraint firstItem="Ydf-Yu-tKC" firstAttribute="leading" secondItem="pgf-sb-qrV" secondAttribute="leading" constant="40" id="YXb-7r-U9H"/>
+                            <constraint firstItem="pgf-sb-qrV" firstAttribute="bottom" secondItem="ebt-Bb-8sn" secondAttribute="bottom" id="bSg-GO-O0L"/>
+                            <constraint firstItem="Ydf-Yu-tKC" firstAttribute="centerY" secondItem="lip-T2-Xce" secondAttribute="centerY" id="pGK-9k-cJm"/>
+                            <constraint firstItem="ebt-Bb-8sn" firstAttribute="top" secondItem="i2G-SP-YB9" secondAttribute="bottom" constant="30" id="tCR-Of-pN3"/>
+                            <constraint firstItem="i2G-SP-YB9" firstAttribute="top" secondItem="pgf-sb-qrV" secondAttribute="top" id="yPv-4r-K1T"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="pgf-sb-qrV"/>
                     </view>
+                    <navigationItem key="navigationItem" id="yeQ-g4-vrL">
+                        <barButtonItem key="rightBarButtonItem" title="PDF OCR" id="97L-ER-dc6">
+                            <connections>
+                                <action selector="pdfOcrTapped" destination="TiK-EU-uPZ" id="CPh-C7-d1S"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="i2G-SP-YB9" id="yq9-Ao-f1t"/>
+                        <outlet property="infoLabel" destination="Ydf-Yu-tKC" id="JIO-ve-0x5"/>
+                        <outlet property="spinner" destination="ulR-ik-Csc" id="uoA-DZ-l3v"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="isH-7m-zF9" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1047.8260869565217" y="138.61607142857142"/>
+        </scene>
+        <!--Result View Controller-->
+        <scene sceneID="BDe-7E-OIY">
+            <objects>
+                <viewController storyboardIdentifier="ResultViewController" id="BGE-4x-FW1" customClass="ResultViewController" customModule="ScanberrySDK" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WCS-M1-FA8">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="S6I-PD-7qU">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="S6I-PD-7qU" firstAttribute="trailing" secondItem="2Li-FX-IIm" secondAttribute="trailing" id="HEE-aS-T2g"/>
+                            <constraint firstItem="2Li-FX-IIm" firstAttribute="bottom" secondItem="S6I-PD-7qU" secondAttribute="bottom" id="HWe-Yd-RU0"/>
+                            <constraint firstItem="S6I-PD-7qU" firstAttribute="top" secondItem="2Li-FX-IIm" secondAttribute="top" id="Jf6-Ia-7KH"/>
+                            <constraint firstItem="S6I-PD-7qU" firstAttribute="leading" secondItem="2Li-FX-IIm" secondAttribute="leading" id="r8r-D2-IJG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2Li-FX-IIm"/>
+                    </view>
+                    <connections>
+                        <outlet property="textView" destination="S6I-PD-7qU" id="cja-SB-zAz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gHu-7j-VUH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1785.5072463768117" y="140.625"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8ev-lh-q8F">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cX0-gY-IyR" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RdM-37-aQ0">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="TiK-EU-uPZ" kind="relationship" relationship="rootViewController" id="FEa-iP-3h3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NoV-fU-nU2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="138.61607142857142"/>
         </scene>
     </scenes>
 </document>
